<resources>
    <string name="app_name">sampleApp</string>

    <string name="from_where">From where?</string>
    <string name="where_to">Where to?</string>
    <string name="show_offers">Show Rides</string>
    <string name="show_active_rides">Active Rides</string>

    <!--Enter rides details view commit-->
    <string name="suitcases">Suitcases</string>
    <string name="more">More</string>
    <string name="passengers">Passengers</string>
    <string name="ride_details">Ride Details</string>
    <string name="note_for_driver">Notes for the driver</string>
    <string name="ride_details_hint_phone">Phone Number *</string>
    <string name="ride_details_hint_name">Name *</string>
    <string name="your_details">Your details</string>
    <string name="fill_mandatory_fields">Please fill in all mandatory fields</string>
    <string name="ride_options">Ride Options</string>

    <string name="eta">ETA</string>
    <string name="estimated_price">Estimated Price</string>
    <string name="book">Book</string>

    <string name="booked">Booked</string>
    <string name="not_available_initial">N/A</string>
    <string name="cancel_ride">Cancel Ride</string>
    <string name="leave_now">Leave now</string>
    <string name="leave_later">Set your departure time</string>
    <string name="invalid_prebooking_time">Please select pre-booking date that is at least 30 minutes from now</string>
    <string name="prebook_time_picker_title">Must be at least 30 minutes from now.</string>

    <string name="autocomplete_title">Autocomplete</string>
    <string name="show_offers_title">Show Rides</string>
    <string name="ride_status_title">Ride Status</string>
    <string name="public_transport_details">Details</string>
    <string name="public_transport">Public Transport</string>
    <string name="active_rides">Active Rides</string>
    <string name="error_no_ride_options_results">No results found. Please try to search a ride again.</string>
    <string name="next">Next</string>
    <string name="app_login">App Login</string>
    <string name="confirmed_route_address">The confirmed route for taxis may be slightly different from the requested route,
        the confirmed route is from street: %1$s, number: %2$s. to street: %3$s, number: %4$s.</string>

    <string name="enter_user_name">Enter user id</string>
    <string name="ride_cancelled">Ride cancelled</string>
    <string name="ride_cancel_rejected">Cancellation request rejected by the supplier</string>
    <string name="subscribe_to_messages">Subscribe to messages</string>
    <string name="provider_installer_failed">google play services is unavailable</string>
    <string name="provider_installer_needs_update">install/update/enable Google Play services</string>

    <string name="login_phone_number">phone number</string>
    <string name="login_phone_verification_pin_code">pin code</string>
    <string name="login_register_button">login</string>
    <string name="login_send_sms_button">send SMS</string>
    <string name="login_verify_pin_code_button">verify</string>
    <string name="login_account_title">Account</string>
    <string name="login_logout_button">Logout</string>
    <string name="login_phone_verification_button">Phone verification</string>
    <string name="login_pin_code_title">Pin code verification</string>
    <string name="login_sms_sent_successfully">SMS sent successfully</string>
    <string name="login_app_successfully">App Logged in successfully</string>
    <string name="login_pin_verified_successfully">Phone verified successfully</string>
    <string name="login_not_logged_id">not logged in - set unique developer userID which combined with appKey and appSecret will allow use of Map, MapServices, DemandVerticalCoverage, DemandGetRides</string>
    <string name="login_not_verified">For demand services, phone verification is required.</string>
    <string name="login_verified">verified</string>
    <string name="login_not_valid_user_name">User name is mandatory for registration</string>
    <string name="login_not_valid_phone_number">Phone number is mandatory for phone verification</string>
    <string name="login_verification_not_valid_pic_code">Pin code is mandatory for phone verification</string>
    <string name="login_user_info_format">UserID %s, %s</string>

    <string name="phone_verification_alert_title">phone verification</string>
    <string name="phone_verification_alert_message">you need to verify your phone number to continue</string>
    <string name="phone_verification_continue_button_title">Continue</string>
</resources>
